tests/snapshots/diagnostic_tests__ui@argument_count_mismatch_over.au.snap
---
source: tests/diagnostic_tests.rs
expression: "fn main() {\n    bar(1, 2)\n}\n\nfn bar(value: I32) {}\n"
input_file: tests/inputs/diagnostics/argument_count_mismatch_over.au
---
Error: Mismatched argument count
   ╭─[ main:2:5 ]
   │
 5 │ fn bar(value: I32) {}
   │       ──────┬──────  
   │             ╰──────── Due to the definition here
   │
   ├─[ main:2:5 ]
   │
 2 │     bar(1, 2)
   │     ────┬────  
   │         ╰────── Expected 1 argument, but got 2
───╯
